<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_margin="10dp"
    android:focusable="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
        android:id="@+id/projectLayout"
         android:background="@color/green_50">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImage"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
             card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/partnerLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/can"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/my_project"
            android:textColor="@color/navy_blue"
            android:textSize="14sp"
            android:textStyle="bold"


             />

        <TextView
            android:id="@+id/text_view_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:text="@string/tanzania"

            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/text_view_partner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/can_partner"
            android:textSize="16sp"

             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ongoing"
            android:textColor="@color/greenDark"
            android:textSize="16sp"
            android:textStyle="bold"

             />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/sep_2020_march_2021"
            android:textColor="@color/forest_green"
            android:textSize="16sp"
            android:textStyle="bold"

           />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
