<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
                android:layout_height="300dp"

                android:layout_margin="8dp"
                >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:background="@drawable/stickgreen"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginLeft="5dp">

        <!--
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/pushpin"
                        />-->
        <View
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp" />


        <ImageView
            android:id="@+id/userImage"
            android:layout_width="40dp"

            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:src="@drawable/circular_bordershape"
            android:contentDescription="@string/todo"
            android:layout_marginLeft="20dp" />


        <TextView
            android:id="@+id/text_view_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="50dp"
            android:text="@string/projectTitle"
            android:textColor="@color/navy_blue"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp" />

        <TextView
            android:id="@+id/text_view_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/amsterdam"
            android:text="@string/mwanza_social_hall"
            android:textColor="#000000"
            android:textSize="12sp"
            android:layout_marginLeft="50dp" />

        <TextView
            android:id="@+id/text_view_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="51dp"
            android:fontFamily="@font/amsterdam"
            android:text="@string/tanzania"
            android:textSize="12sp"
            android:layout_marginLeft="51dp" />

        <TextView
            android:id="@+id/text_view_partner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/can"
            android:textSize="12sp" />
        <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="40dp"
        >


        <TextView
                android:id="@+id/text_view_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:fontFamily="@font/amsterdam"
                android:text="@string/workshop"
                android:textColor="@color/greenDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fill_report"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="58dp"
                android:layout_marginLeft="58dp"
                android:layout_toEndOf="@id/text_view_event_type"
                android:layout_toRightOf="@id/text_view_event_type"
                android:background="@drawable/fill_report"
                android:gravity="center_vertical"

                android:text="@string/fill_report"
                android:textColor="#F7FF16"

                card_view:drawableStartCompat="@drawable/ic_yellow_editor" />
        </RelativeLayout>
        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:text="@string/_19th_march_2021"
            android:textColor="@color/forest_green"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="54dp" />
    </LinearLayout>





</androidx.cardview.widget.CardView>
