<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"

    android:orientation="vertical"
    android:background="@color/greenDark"
    android:layout_height="match_parent"
    tools:context=".SingleProjectActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:background="@color/navy_blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:logo="@mipmap/ic_rsn_africa"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/app_title" />

    <ScrollView
        android:layout_below="@id/tool_bar"

        android:layout_width="match_parent"
        android:padding="@dimen/spacing_large"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/greenDark">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewImage"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/partner_Logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/can"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/single_project_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/my_project"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"


                        />

                    <TextView
                        android:id="@+id/single_project_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="5dp"
                        android:text="@string/tanzania"

                        android:textSize="14sp"
                        />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/ongoing"
                        android:textColor="@color/yellow_color"
                        android:textSize="16sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/single_project_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sep_2020_march_2021"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"

                        />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="end"
                android:clickable="true"
                android:textAllCaps="false"
                android:background="@color/greenDark"
                android:text="@string/delete_project"
                android:textColor="#FE0000"
                android:textStyle="bold"
                android:focusable="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>


            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/project_goals"/>
            <TextView
                android:id="@+id/specificGoals"
                android:layout_marginStart="5dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/can3label"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
               android:layout_marginTop="5dp"
                android:background="@android:color/white"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/project_activities"/>
            <TextView
                android:id="@+id/specificActivities"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text=""/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>
            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/project_impact"/>
            <TextView
                android:id="@+id/specificImpact"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text=""/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>



            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/comments_and_feedback"/>
            <RelativeLayout
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/greenDark"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/greenDark"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">



                            <ImageView
                                android:id="@+id/commentingUserImage"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="8dp"
                                android:layout_gravity="center_vertical"

                                />

                    <EditText
                        android:id="@+id/editTextcomment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_weight="2"
                        android:hint="@string/make_a_comment"
                        android:textColor="#fff"
                        android:textColorHint="@android:color/white" />

                    <TextView
                        android:id="@+id/postComment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="@string/post"
                        android:clickable="true"
                        android:textColor="@color/yellow_color"
                        android:textStyle="bold"
                        android:focusable="true" />


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>